--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Recipes</h1>
     <ul>
-        <a href="mashed potatoes.html">mashed potatoes</a>
+        <a href="recipes/mashed potatoes.html">mashed potatoes</a>
     </ul>
 </body>
 </html>
