--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Recipes</h1>
     <ul>
         <a href="recipes/mashed potatoes.html">mashed potatoes</a>
+        <a href="recipes/Creamy Corn Pudding.html">corn pudding</a>
     </ul>
 </body>
 </html>
