fixed list on index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Recipes</h1>
     <ul>
-        <a href="recipes/mashed potatoes.html">mashed potatoes</a>
-        <a href="recipes/Creamy Corn Pudding.html">corn pudding</a>
+        <li><a href="recipes/mashed potatoes.html">mashed potatoes</a></li>
+        <li><a href="recipes/Creamy Corn Pudding.html">corn pudding</a></li>
     </ul>
 </body>
 </html>
