added third recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/mashed potatoes.html">mashed potatoes</a></li>
         <li><a href="recipes/Creamy Corn Pudding.html">corn pudding</a></li>
+        <li><a href="recipes/Green Bean Casserole.html">Green Bean Casserole</a></li>
     </ul>
 </body>
 </html>
